--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -308,6 +308,7 @@
 		img {
 			display: block;
 			width: 100%;
+			height: 100%; 
 		}
 
 		&.avatar48 {
@@ -389,71 +390,6 @@
 		}
 	}
 
-/* Form */
-
-	form {
-		label {
-			display: block;
-			text-align: left;
-			margin-bottom: 0.5em;
-		}
-
-		input[type="text"],
-		input[type="email"],
-		input[type="password"],
-		select,
-		textarea {
-			position: relative;
-			-webkit-appearance: none;
-			display: block;
-			border: 0;
-			outline: 0;
-			background: #fff;
-			background: rgba(255, 255, 255, 0.75);
-			width: 100%;
-			border-radius: 0.35em;
-			padding: 0.75em 1em 0.75em 1em;
-			box-shadow: inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.05);
-			border: solid 1px rgba(0, 0, 0, 0.15);
-			@include vendor('transition', 'all 0.35s ease-in-out');
-
-			&:focus {
-				box-shadow: 0 0 2px 1px #8ebebc;
-				background: #fff;
-			}
-		}
-
-		input[type="text"],
-		input[type="email"],
-		input[type="password"],
-		select {
-			line-height: 1.25em;
-		}
-
-		textarea {
-			min-height: 14em;
-		}
-
-		::-webkit-input-placeholder {
-			color: #555 !important;
-		}
-
-		:-moz-placeholder {
-			color: #555 !important;
-		}
-
-		::-moz-placeholder {
-			color: #555 !important;
-		}
-
-		:-ms-input-placeholder {
-			color: #555 !important;
-		}
-
-		::-moz-focus-inner {
-			border: 0;
-		}
-	}
 
 /* Table */
 
@@ -523,6 +459,7 @@
 	.item {
 		box-shadow: 0 0.05em 0.15em 0 rgba(0, 0, 0, 0.05);
 		margin-bottom: 40px;
+	
 
 		header {
 			background: #fff;
