--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -661,25 +661,24 @@
 
 	#main {
 		margin-left: 375px;
-
+		
 		> section {
 			margin: 0;
 			overflow: hidden;
 			padding: 4em 0;
 			box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 			text-align: center;
-			background-image: url('../images/overlay.png');
+
 
 			&.dark {
-				color: #ddd;
-				color: rgba(255, 255, 255, 0.75);
-
+				color: white;
+				background-color: #404040;
 				h2, h3, h4, h5, h6 {
 					color: inherit;
 				}
 
 				strong {
-					color: #fff;
+					color: rgb(255, 255, 255);
 					border-color: inherit;
 				}
 
@@ -694,14 +693,14 @@
 			}
 
 			&.cover {
+				margin: 0 auto;
 				padding: 10em 0;
-				background-size: cover;
-				background-position: center center;
+			
 			}
 
 			&.one {
-				background-color: #81918E;
-				background-image: url('../images/banner.jpg');
+				height: 100vh;
+			
 			}
 
 			&.two {
@@ -760,11 +759,6 @@
 					padding: 3em 0;
 				}
 
-				section {
-					&.cover {
-						padding: 5em 0;
-					}
-				}
 			}
 	/*Image */ 
 	.image {
